# WEC4SO

./: .gitignore  LICENSE  Readme.md  pyproject.toml
matplotlib/: __init__.py  pyplot.py
numpy/: __init__.py
pandas/: __init__.py
tests/: conftest.py  test_core.py
wec/: __init__.py  constants.py
wec/cli/: demo.py
wec/core/: formulas.py  interpolation.py  month_selector.py  optimizer.py  reservoir_simulator.py
wec/domain/: geometry.py  hydrological_series.py  static_levels.py
wec/facade/: analyzer.py
wec/optimizers/: __init__.py  dynamic.py  greedy.py  gwo.py  pyomo_optimizer.py
wec/visualization/: plots.py
