# pyproject.toml — метаданные пакета WEC

# ------------------------------------------------------------

# TOML‑файл описывает базовые сведения о проекте и его

# зависимостях.  Комментарии начинаются с символа «#».

# ------------------------------------------------------------

[project]
name = "wec"           # Имя пакета, под которым он будет устанавливаться
version = "0.1.0"      # Семантическая версия (MAJOR.MINOR.PATCH)

# Зависимости, необходимые для корректной работы библиотеки.

# Указываются минимальные требуемые версии (при необходимости их

# можно расширить диапазоном, например "numpy>=1.24").

dependencies = [
"numpy",       # Численные вычисления и векторизация
"pandas",      # Табличные структуры данных, DataFrame‑ы
"matplotlib",  # Базовая библиотека построения графиков
]
